# bank-analytics

./: .env.example  .gitignore  README.md  infer_from_joblib.py  pyproject.toml  requirements.txt  run_v2021.py  run_v2021_shards.py
bank_analytics/: __init__.py  __main__.py  infer_joblib.py  prometheus_csv.py  settings.py  v2021_capacity.py  v2021_data.py  v2021_diagnose.py  v2021_model.py  v2021_shards.py
bank_analytics/pipelines/: __init__.py  v2021.py  v2021_merge_12h.py  v2021_shards.py
docs/: Kaggle-12h满窗执行步骤.md  Kaggle多分片运行指南.md  Prometheus-CSV推理.md  云端运行v2021指南.md  多分片固定服务实验.md  独立仓库迁移.md  长序列实验方案.md
scripts/: __init__.py  kaggle_fetch_v2021.py
