[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-analytics"
version = "0.1.0"
description = "Offline analytics for bank observability demo (v2021 trace, IF, short-window QPS-driven capacity)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]
prophet = ["prophet>=1.1.5"]
all = ["pyarrow>=14.0", "prophet>=1.1.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bank_analytics*"]
